# git-utils.sh

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  findings.md  package.json  progress.md  pyproject.toml  q.md  task_plan.md  test-all.sh  test_alias.txt
.claude/: gsd-file-manifest.json
.codex/: config.toml  gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
__test__/: ignore_workspace.test.sh  init.test.sh  install.test.sh  patch_file_by_comnos.test.sh  replace_cn_punc_.test.sh  runtime-layout.test.sh  test_cli_entry_parsing.py  test_cli_helpers.py  test_expand_runtime_args.py  test_runtime_layout.py  test_utils.sh  test_windows_wrappers.py  test_wsha_core_arg_parsing.py  test_wsha_env_cli.py  wsh-barry-pick.test.sh  wsh-fpatch.test.sh  wsh-real-ignore.test.sh  wsh-replace-cn-punc.test.sh  wsh.test.sh  wsha-py.sh  wsha.test.sh  wsha_python_test.py
clink-lua-scripts/: git-utils-common.lua  git-utils.lua  w.lua  wsh-fpatch.lua  wsh-ping.lua  wsh-real-ignore.lua  wsh-replace-cn-punc.lua  wsh.lua
config/: wsh-alias.txt
docs/: INSTALL.md  W-WSHA.md  WSH-BARRY-PICK.md  WSHA.md
prompts/: spec.md
py/: cli.py  setup_tools.py
scripts/: init.bat  install.sh  remote-install.sh
sh/: exec-git-bash.bat  ignore_workspace.sh  install.sh  patch-file-by-comnos.sh  remote-install.sh  test_for.bat  test_for2.bat  uninstall.sh  w.bat  w.sh  wsh-barry-pick.sh  wsh-fpatch.sh  wsh-kill-port.bat  wsh-ping.bat  wsh-real-ignore.sh  wsh-replace-cn-punc.sh  wsh.bat  wsha-core.py  wsha.bat  wsha.ps1  wsha.sh
(+593 files in other folders)
