[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsha"
version = "0.1.0"
description = "wsha - alias command launcher"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.scripts]
# SHELL-01: uvx wsha 使用此 entry point
# SHELL-02: pip install wsha 后 w 命令使用此 entry point
# SHELL-05: w <alias> 路由到 Python 实现（通过 run_with_fallback）
# SHELL-04: run_with_fallback 包含 fallback 逻辑
w = "wsha.cli:run_with_fallback"
wsha = "wsha.cli:run_with_fallback"

[tool.hatch.build.targets.wheel]
# packages = ["py/wsha"] 告诉 hatchling：py/wsha/ 目录作为 wsha 包打包到 wheel
# 修正前为 ["wsha"]，该路径在项目根目录下不存在
packages = ["py/wsha"]

[tool.hatch.build.targets.wheel.data]
# 打包 py/wsha/data/ 目录下的所有 .txt 文件
include = ["py/wsha/data/*.txt"]
